# offerlens

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/offerlens/: cli.py  config.py  llm.py
src/offerlens/notify/: gmail.py  template.py
src/offerlens/pipeline/: ingestion.py  scan.py  scoring.py
src/offerlens/sources/: adzuna.py  base.py  francetravail.py  indeed.py  registry.py  remotive.py  url_fetch.py
src/offerlens/storage/: firestore.py
tests/: test_adzuna.py  test_dedup_cross_source.py  test_dedup_offers.py  test_enriched_digest.py  test_francetravail.py  test_freshness_filter.py  test_gmail_headless.py  test_offer_scorer.py  test_purge_old_offers.py  test_registry.py  test_run_pipeline.py  test_scan_pipeline.py  test_stateless_digest.py
